# BALLISTX

./: .gitignore  CMakeLists.txt  DIAGNOSIS_REPORT.txt  Doxyfile  README.md  RL_TEST_QUICK_SUMMARY.txt  RL_TEST_REPORT.md  imu_data.csv  python_demo.py
.claude/: settings.local.json
.claude/agents/: ballistx-dev.md
ballistx_gym/: __init__.py  ballistx_env.py  discrete_ballistx_env.py  missile_guidance_env.py
ballistx_gym/renderers/: __init__.py  trajectory_2d.py
docs/: gravity_fix_summary.md
examples/: FINAL_DIAGNOSIS_REPORT.py  analyze_trained_model.py  compare_random_vs_pn.py  coriolis_demo.cpp  debug_pn.py  debug_pn_full.py  demo.cpp  diagnose_ppo_failure.py  ekf_demo.cpp  gravity_demo.cpp  guidance_demo.cpp  kalman_visualization_demo.cpp  kalman_visualize.py  mach_drag_demo.cpp  magnus_demo.cpp  miss_distance_demo.cpp  projectile_types_demo.cpp  proportional_navigation_demo.cpp  quaternion_demo.cpp  quick_pn_baseline_test.py  random_agent_demo.py  rk4_trajectory.cpp  simple_trajectory.cpp  state_6dof_demo.cpp  target_demo.cpp  test_action_clipping.py  test_ballistx_env.py  train_dqn.py  train_ppo.py  train_ppo_easy.py  train_ppo_easy_v2.py  train_ppo_hybrid.py  verify_fix.py  wind_model_demo.cpp
include/aerodynamics/: drag_model.h  magnus_effect.h
include/atmosphere/: isa_model.h
include/ballistics/: projectile.h  state_6dof.h
include/guidance/: guidance.h  miss_distance.h  proportional_navigation.h
include/sensors/: imu_model.h  kalman_filter.h  radar_model.h  sensor_fusion.h
include/utils/: coriolis_effect.h  gravity_model.h  integrator.h  quaternion.h  vec3.h
logs/ppo/: eval.monitor.csv  monitor.csv
logs/ppo/eval/: evaluations.npz  monitor.csv
logs/ppo2/: eval.monitor.csv  monitor.csv
logs/ppo2/eval/: evaluations.npz
logs/ppo_easy/: monitor.csv
logs/ppo_hybrid/: monitor.csv
src/aerodynamics/: drag_model.cpp
src/atmosphere/: isa_model.cpp
src/ballistics/: projectile.cpp
src/bindings/: bindings.cpp
src/guidance/: guidance.cpp
tests/: main_tests.cpp  test_guidance.cpp  test_imu_model.cpp  test_kalman_filter.cpp  test_projectile.cpp  test_quaternion.cpp  test_radar_model.cpp  test_sensor_fusion.cpp  test_vec3.cpp
visualizer/: guidance_comparison.py  plot2d.py  plot3d.py
